# pvr.lifesat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
debian/: changelog.in  control  copyright  kodi-pvr-dvblink.install  rules
diagram/: lifesatclass.dia  lifesatclass.dia.autosave
lib/libdvblinkremote/: CMakeLists.txt
lib/liblifesatremote/: CMakeLists.txt  channel.cpp  curlhttpclient.cpp  curlhttpclient.h  epg.cpp  favorites.cpp  generic_response.cpp  generic_response.h  item_metadata.cpp  json.hpp  lifesatremote.cpp  lifesatremote.h  lifesatremoteapicommunication.cpp  lifesatremoteapicommunication.h  lifesatremotecommunication.cpp  lifesatremoteconnection.h  lifesatremotehttp.cpp  lifesatremotehttp.h  lifesatremoteserialization.h  m3u_playlist.cpp  parental_lock.cpp  platform_selector.h  playback_container.cpp  playback_item.cpp  playback_object.cpp  program.cpp  recording.cpp  recording_settings.cpp  remove_playback_object_request.cpp  request.h  response.h  scheduling.cpp  scheduling.h  server_info.cpp  stop_stream_request.cpp  stream.cpp  stream_request.cpp  streaming_capabilities.cpp  token.cpp  transcoded_video_stream_request.cpp  (+6 more)
lib/liblifesatremote/windows/: json_ex.h
pvr.dvblink/: addon.xml.in
pvr.lifesat/: addon.xml  addon.xml.in  changelog.txt
src/: HttpPostClient.cpp  HttpPostClient.h  LifeSatClient.cpp  LifeSatClient.h  PVRLifeSatData.cpp  PVRLifeSatData.h  RecordingStreamer.cpp  RecordingStreamer.h  TimeShiftBuffer.cpp  TimeShiftBuffer.h  base64.cpp  client.cpp
